# fast-oil

./: CMakeLists.txt  FastOil.sln  FindOpenCL.cmake  ProjectHome.md
FastOil/: CudaHost.cpp  FastOil.vcxproj  Makefile  Ndfa.h  NdfaDotExporter.cpp  NdfaDotExporter.h  Nfa.cpp  Nfa.h  NfaDotExporter.cpp  NfaDotExporter.h  OilTrainer.cpp  OilTrainer.h  SamplesReader.cpp  Testing.cpp  main.cpp
branches/BoostVersion/FastOil/: BitVector.cpp  BitVector.h  Ndfa.cpp  Ndfa.h  NdfaDotExporter.cpp  OilTrainer.cpp  OilTrainer.h  main.cpp
branches/cuda/FastOil/: BitVector.h  FastOil.vcxproj  FastOil.vcxproj.filters  NdfaDotExporter.h  Testing.cpp  stdafx.h
branches/opencl/: CMakeLists.txt  FastOil.sln  Nfa.cpp  stdafx.h
branches/opencl/FastOil/: CMakeLists.txt
branches/opencl/src/: BitUtil_uint32.h  BitUtil_uint64.h  Nfa.h  TestNfa.cpp  Testing.cpp  config.h.in  stdafx.h
src/: Nfa.cpp  Nfa.h  NfaDotExporter.h  NfaInterface.h  OilTrainer.h  SamplesReader.cpp  Testing.cpp  Testing.h
trunk/FastOil/: FastOil.vcxproj  FastOil.vcxproj.filters  NdfaDotExporter.cpp  Nfa.cpp  Nfa.h  NfaDotExporter.cpp  OilTrainer.cpp  SamplesReader.cpp  Testing.cpp  main.cpp
